# projet_c

./: CMakeLists.txt  main.c  test_utilisateurs.csv
fonction/partie_A/: utilisateurs.h
fonction/partie_B/: recherche_utilisateur.c
menus/: menu_gestion_des_exemplaire.c  menu_gestion_des_exemplaire.h  menu_gestion_utilisateur.c  menu_gestion_utilisateur.h  menu_livre.c  menu_livre.h  menu_principal.c  menu_principal.h
partie_A/: utilisateurs.c  utilisateurs.h
partie_B/: recherche_utilisateur.c  recherche_utilisateur.h
partie_livres/: CMakeLists.txt  bibliotheque.c  bibliotheque.h  bibliothèque.c  main.c  recherche.c  recherche.h  statistiques.c  statistiques.h  test.c  test.h
